--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "downtown-toronto",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa72565861d445b88baf09449f4876a4",
+       "model_id": "06762b8cea804170aaf1ed36d322c0ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,20 +49,24 @@
     "     'mark': 'bar'}\n",
     "spec_with_data = spec_no_data.copy()\n",
     "nsamples = 100_000\n",
-    "steps = 10_000\n",
+    "steps = 1_000\n",
     "rdata = np.random.normal(loc=0, scale=0.1, size=nsamples)\n",
-    "hist = np.zeros(nbins)\n",
     "widget = VegaWidget(spec=spec_no_data)\n",
     "display(widget)\n",
-    "for sl in np.split(rdata, steps):\n",
-    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
-    "    hist += h\n",
-    "    source = pd.DataFrame({\n",
+    "async def progressive_loop(widget, nbins=50):\n",
+    "    hist = np.zeros(nbins)\n",
+    "    for sl in np.split(rdata, steps):\n",
+    "        await aio.sleep(0.1)\n",
+    "        h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
+    "        hist += h\n",
+    "        source = pd.DataFrame({\n",
     "            'x': range(nbins),\n",
     "            'y': hist,\n",
     "        })\n",
-    "    widget.update('data', remove='datum.x>=0')\n",
-    "    widget.update('data',insert=source.to_dict(orient='records'))"
+    "        widget.update('data', remove='datum.x>=0')\n",
+    "        widget.update('data',insert=source.to_dict(orient='records'))\n",
+    "\n",
+    "await progressive_loop(widget)"
    ]
   },
   {
@@ -81,25 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "personalized-clone",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83e8c3201860422ba65118d4789145df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -117,7 +106,7 @@
     "     'mark': 'bar'}\n",
     "spec_with_data = spec_no_data.copy()\n",
     "nsamples = 100_000\n",
-    "steps = 10_000\n",
+    "steps = 1_000\n",
     "rdata = np.random.normal(loc=0, scale=0.1, size=nsamples)\n",
     "hist = np.zeros(nbins)\n",
     "widget = VegaWidget(spec=spec_no_data)\n",
@@ -136,67 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "compact-costume",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for sl in np.split(rdata, steps):\n",
-    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
-    "    hist += h\n",
-    "    source = pd.DataFrame({\n",
-    "            'x': range(nbins),\n",
-    "            'y': hist,\n",
-    "        })\n",
-    "    widget.update('data', remove='datum.x>=0')\n",
-    "    widget.update('data',insert=source.to_dict(orient='records'))"
+    "await progressive_loop(widget)"
    ]
   },
   {
@@ -219,51 +153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "rental-alfred",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8ed21ccf739467ab5d438575e4653df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import altair as alt\n",
@@ -282,24 +175,36 @@
     "spec_with_data = spec_no_data.copy()\n",
     "\n",
     "nsamples = 100_000\n",
-    "steps = 10_000\n",
+    "steps = 1_000\n",
     "rdata = np.random.normal(loc=0, scale=0.1, size=nsamples)\n",
-    "hist = np.zeros(nbins)\n",
     "widget = VegaWidget(spec=spec_no_data)\n",
     "display(widget)\n",
-    "for sl in np.split(rdata, steps):\n",
-    "    h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
-    "    hist += h\n",
-    "    source = pd.DataFrame({\n",
+    "async def progressive_loop2(widget, nbins):\n",
+    "    hist = np.zeros(nbins)\n",
+    "    for sl in np.split(rdata, steps):\n",
+    "        await aio.sleep(0.1)\n",
+    "        h, _ = np.histogram(sl, bins=nbins, range=(-1.0,1.0))\n",
+    "        hist += h\n",
+    "        source = pd.DataFrame({\n",
     "            'x': range(nbins),\n",
-    "            'y': hist,\n",
+    "            'y': hist  # /np.sum(hist),\n",
     "        })\n",
-    "    spec_with_data[\"data\"] = {\n",
+    "        spec_with_data[\"data\"] = {\n",
     "            \"name\": \"data\",\n",
     "            \"values\": source.to_dict(orient='records'),\n",
     "        }\n",
-    "    widget.spec = spec_with_data"
+    "        widget.spec = spec_with_data\n",
+    "\n",
+    "await progressive_loop2(widget, nbins)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "virgin-storm",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
