Fix flicker for streaming vega

--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06762b8cea804170aaf1ed36d322c0ac",
+       "model_id": "76995c05d9d645a09453168396a56bbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,8 +63,8 @@
     "            'x': range(nbins),\n",
     "            'y': hist,\n",
     "        })\n",
-    "        widget.update('data', remove='datum.x>=0')\n",
-    "        widget.update('data',insert=source.to_dict(orient='records'))\n",
+    "        #  widget.update('data', remove='datum.x>=0')\n",
+    "        widget.update('data',remove=\"true\", insert=source.to_dict(orient='records'))\n",
     "\n",
     "await progressive_loop(widget)"
    ]
@@ -85,10 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "personalized-clone",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c41448709b9f4de1b7760285dfc0b54c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -125,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "compact-costume",
    "metadata": {},
    "outputs": [],
@@ -153,10 +168,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "rental-alfred",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e3085f9db0d44ca9562d7cf1f4fb157",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import altair as alt\n",
@@ -201,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "virgin-storm",
+   "id": "intended-detroit",
    "metadata": {},
    "outputs": [],
    "source": []
