--- a/notebooks/VegaIssue.ipynb
+++ b/notebooks/VegaIssue.ipynb
@@ -12,25 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "downtown-toronto",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76995c05d9d645a09453168396a56bbb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -64,6 +49,8 @@
     "            'y': hist,\n",
     "        })\n",
     "        #  widget.update('data', remove='datum.x>=0')\n",
+    "        #print(\"displayed\", widget._displayed)\n",
+    "        widget._displayed = True\n",
     "        widget.update('data',remove=\"true\", insert=source.to_dict(orient='records'))\n",
     "\n",
     "await progressive_loop(widget)"
@@ -85,25 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "personalized-clone",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c41448709b9f4de1b7760285dfc0b54c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -140,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "compact-costume",
    "metadata": {},
    "outputs": [],
@@ -168,25 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "rental-alfred",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e3085f9db0d44ca9562d7cf1f4fb157",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VegaWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import altair as alt\n",
@@ -194,7 +151,7 @@
     "from vega.widget import VegaWidget\n",
     "nbins = 50\n",
     "spec_no_data = {\n",
-    "    '$schema': 'https://vega.github.io/schema/vega-lite/v4.8.1.json',\n",
+    "    '$schema': 'https://vega.github.io/schema/vega-litewidget._displayed/v4.8.1.json',\n",
     "     'config': {'view': {'continuousHeight': 300, 'continuousWidth': 400}},\n",
     "     'data': {'name': 'data'},\n",
     "     'encoding': {\n",
@@ -253,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
