--- a/notebooks/DataViewer.ipynb
+++ b/notebooks/DataViewer.ipynb
@@ -45,17 +45,13 @@
     "    PREFIX+'yellow_tripdata_2015-05.csv'+SUFFIX,\n",
     "    PREFIX+'yellow_tripdata_2015-06.csv'+SUFFIX,\n",
     "]\n",
-    "num_cols = ['pickup_longitude', 'pickup_latitude','dropoff_longitude',\n",
-    "        'dropoff_latitude', 'trip_distance', 'RateCodeID']\n",
-    "cols = num_cols #+ ['store_and_fwd_flag']\n",
+    "cols = ['pickup_longitude', 'pickup_latitude','dropoff_longitude',\n",
+    "        'dropoff_latitude', 'trip_distance', 'RateCodeID', 'store_and_fwd_flag']\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
     "CSV = SimpleCSVLoader(index_col=False, skipinitialspace=True,\n",
     "                usecols=cols, scheduler=s, throttle=100)\n",
-    "\n",
     "CSV.input.filenames = CST.output[0]\n",
-    "#pr=Print(proc=lambda x: None, scheduler=s)\n",
-    "#pr.input[0] = CSV.output.result\n",
     "stext = StatsExtender(usecols=cols)\n",
     "stext.create_dependent_modules(CSV, hist=True, min_=True,\n",
     "                              max_=True,\n",
@@ -90,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
