adding kll sketching

--- a/notebooks/DataViewer.ipynb
+++ b/notebooks/DataViewer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "geographic-shannon",
    "metadata": {},
    "outputs": [],
@@ -47,6 +47,8 @@
     "]\n",
     "cols = ['pickup_longitude', 'pickup_latitude','dropoff_longitude',\n",
     "        'dropoff_latitude', 'trip_distance', 'RateCodeID', 'store_and_fwd_flag']\n",
+    "#df = pd.read_csv(URLS[0], nrows=1000)\n",
+    "#cols = df.dtypes.to_dict()\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
     "CSV = SimpleCSVLoader(index_col=False, skipinitialspace=True,\n",
@@ -69,12 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fleet-final",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b26cc50b5024966b0e4a6d4c5aff4b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DataViewer()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as ipw\n",
     "from IPython.display import display\n",
