--- a/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/notebooks/MulticlassScatterplotDemo.ipynb
@@ -2,23 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
     "%gui asyncio\n",
-    "from progressivis_nb_widgets import *\n",
+    "from progressivis_nb_widgets import ControlPanel, Scatterplot, ModuleGraph, wait_for_click\n",
     "sc = Scatterplot()\n",
     "gr = ModuleGraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Scheduler added module(s): ['constant_1', 'csv_loader_1', 'every_1', 'histogram_index_1', 'histogram_index_2', 'histogram_index_3', 'histogram_index_4', 'max_1', 'max_2', 'max_3', 'max_4', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'merge_dict_1', 'merge_dict_2', 'merge_dict_3', 'merge_dict_4', 'min_1', 'min_2', 'min_3', 'min_4', 'range_query2d_1', 'range_query2d_2', 'sample_1', 'sample_2', 'variable_1', 'variable_2', 'variable_3', 'variable_4', 'virtual_variable_1', 'virtual_variable_2']\n",
+      "*****"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import pandas as pd\n",
@@ -56,7 +65,7 @@
     "\n",
     "#PREFIX= 'https://storage.googleapis.com/tlc-trip-data/2015/'\n",
     "#SUFFIX= ''\n",
-    "PREFIX = '../../../nyc-taxi/'\n",
+    "PREFIX = '../../nyc-taxi/'\n",
     "\n",
     "SUFFIX = '.bz2'\n",
     "\n",
@@ -91,17 +100,44 @@
     "    while True:\n",
     "        await wait_for_click(btn, cb)\n",
     "    \n",
-    "aio.create_task(s.start(coros=sc.link_module(MULTICLASS)+\n",
-    "                               [control_panel(\"resume\"),\n",
-    "                               control_panel(\"stop\"), \n",
-    "                               control_panel(\"step\")]));"
+    "aio.create_task(s.start())\n",
+    "coros=sc.link_module(MULTICLASS)+[control_panel(\"resume\"), control_panel(\"stop\"), control_panel(\"step\")]\n",
+    "for coro in coros:\n",
+    "    aio.create_task(coro)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74fbc19ebd554b408b0b7a04255cd56e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Tab(children=(Scatterplot(data='{\"is_running\": true, \"is_terminated\": false, \"run_number\": 124,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******************In scheduler, tasks {<Task finished name='Task-12' coro=<Scheduler.shortcut_manager() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:126> result=None>, <Task finished name='Task-11' coro=<Scheduler._run_loop() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:364> result=None>} done\n",
+      "Leaving run()\n",
+      "In scheduler, tasks {<Task finished name='Task-16' coro=<Scheduler.shortcut_manager() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:126> result=None>, <Task finished name='Task-15' coro=<Scheduler._run_loop() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:364> result=None>} done\n",
+      "Leaving run()\n",
+      "*In scheduler, tasks {<Task finished name='Task-20' coro=<Scheduler.shortcut_manager() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:126> result=None>, <Task finished name='Task-19' coro=<Scheduler._run_loop() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:364> result=None>} done\n",
+      "Leaving run()\n"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as ipw\n",
     "tab = ipw.Tab()\n",
@@ -111,6 +147,13 @@
     "vbox = ipw.VBox([tab, cpanel])\n",
     "vbox"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -119,7 +162,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
