--- a/notebooks/ExampleProgressBar.ipynb
+++ b/notebooks/ExampleProgressBar.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c03a76ac6224bb29b7f0ea6bf3495cd",
+       "model_id": "d678659e184742859f85183403de1dee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eda337b81d7d419994d0071f247cf164",
+       "model_id": "2be2796eec904cab850e08bd78e13f50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,12 +94,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c03a76ac6224bb29b7f0ea6bf3495cd",
+       "model_id": "d678659e184742859f85183403de1dee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SparkLineProgressBar(data={'values': [0.0, 0.46431370621577545, 0.5849986122159594, 0.6696562432775424, 0.7370…"
+       "SparkLineProgressBar()"
       ]
      },
      "metadata": {},
@@ -112,13 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a1071a697dd482397e96898223b5751",
+       "model_id": "899763bfa52e4318bcebd9fa54934005",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
