--- a/notebooks/DataViewerBlobs.ipynb
+++ b/notebooks/DataViewerBlobs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "geographic-shannon",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "from progressivis.vis import StatsExtender\n",
     "from progressivis_nb_widgets.nbwidgets import DataViewer\n",
     "from progressivis.stats.blobs_table import BlobsTable\n",
+    "from progressivis.core import Sink\n",
     "\n",
     "s = Scheduler.default = Scheduler()\n",
     "n_samples = 100_000_000\n",
@@ -31,7 +32,9 @@
     "stext.create_dependent_modules(data, hist=True, min_=True,\n",
     "                              max_=True,\n",
     "                              var=True, distinct=True, \n",
-    "                              corr=True)"
+    "                              corr=True)\n",
+    "sink = Sink(scheduler=s)\n",
+    "sink.input.inp = stext.output.result"
    ]
   },
   {
@@ -44,12 +47,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fleet-final",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6b2e77c8b25420791bfe094e804e2c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DataViewer()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Scheduler added module(s): ['blobs_table_1', 'corr_1', 'distinct_1', 'dyn_var_1', 'dyn_var_2', 'dyn_var_3', 'dyn_var_4', 'dyn_var_5', 'dyn_var_6', 'histogram1_d_categorical_if_1', 'histogram1_d_categorical_if_2', 'histogram1_d_categorical_if_3', 'histogram1_d_if_1', 'histogram1_d_if_2', 'histogram1_d_if_3', 'histogram_index_if_1', 'histogram_index_if_2', 'histogram_index_if_3', 'kll_sketch_if_1', 'kll_sketch_if_2', 'kll_sketch_if_3', 'max_1', 'min_1', 'print_1', 'range_query_if_1', 'range_query_if_2', 'range_query_if_3', 'sink_0af39d7e-0525-4455-a91e-8a8ce1efdd2a', 'sink_1', 'sink_2', 'sink_3', 'sink_4', 'sink_5', 'sink_6', 'sink_7', 'sink_8', 'sink_9', 'stats_extender_1', 'var_1']\n"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as ipw\n",
     "from IPython.display import display\n",
@@ -75,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
