--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from progressivis_nb_widgets.nbwidgets import *"
+    "from progressivis_nb_widgets.nbwidgets import PsBoard, Scatterplot"
    ]
   },
   {
@@ -96,22 +96,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-<<<<<<< HEAD
-   "metadata": {
-    "scrolled": false
-   },
-=======
    "metadata": {},
->>>>>>> data-viewer
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD
-       "model_id": "1d85507e5a65430db2d5e52f5560d45a",
-=======
-       "model_id": "1cc8ecd5a8a14c03b94387a3aa3cde19",
->>>>>>> data-viewer
+       "model_id": "615e8400f99c429f9a235d9176e90fe3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,122 +111,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-<<<<<<< HEAD
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
     }
    ],
    "source": [
-    "#from sidecar import Sidecar\n",
-    "#sc = Sidecar(title='Sidecar Output')\n",
-    "#with sc:\n",
     "display(psboard)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-=======
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "************************"
-     ]
-    }
-   ],
->>>>>>> data-viewer
-   "source": [
-    "import time\n",
-    "time.sleep(10)\n",
-    "\n",
-    "with s:\n",
-    "    PR2 = Every(name=\"Every2Added\", scheduler=s, proc=_quiet)\n",
-    "    PR2.input[0] = CSV.output[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Scheduler added module(s): ['Every2Added']\n"
-     ]
-    }
-   ],
-   "source": [
-    "time.sleep(10)\n",
-    "with s as dataflow:\n",
-    "    dataflow.delete_modules(\"Every2Added\")\n"
    ]
   },
   {
@@ -249,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -263,11 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.8.10"
-=======
-   "version": "3.7.9"
->>>>>>> data-viewer
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
