removing glue coroutines logic

--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -2,27 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from progressivis_nb_widgets.nbwidgets import PsBoard, Scatterplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Scheduler added module(s): ['constant_1', 'csv_loader_1', 'dyn_var_1', 'dyn_var_2', 'every_1', 'histogram_index_1', 'histogram_index_2', 'histogram_index_3', 'histogram_index_4', 'max_1', 'max_2', 'max_3', 'max_4', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'merge_dict_1', 'merge_dict_2', 'merge_dict_3', 'merge_dict_4', 'min_1', 'min_2', 'min_3', 'min_4', 'range_query2d_1', 'range_query2d_2', 'sample_1', 'sample_2']\n"
-     ]
-    }
-   ],
-   "source": [
+    "from progressivis_nb_widgets.nbwidgets import PsBoard, Scatterplot\n",
     "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
     "from progressivis.table import Table\n",
@@ -86,8 +70,7 @@
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(disable=['init_centroids']), MULTICLASS)\n",
     "# 2) When widget is generic or for overloading the link_module() method do:\n",
-    "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
-    "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
+    "# psboard.register_visualisation(FooWidget(), bar_module)\n",
     "# Start application :\n",
     "\n",
     "s.task_start();"
@@ -95,34 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "615e8400f99c429f9a235d9176e90fe3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(psboard)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "display(psboard)"
+   ]
   }
  ],
  "metadata": {
