--- a/notebooks/PPCAProjectionToy.ipynb
+++ b/notebooks/PPCAProjectionToy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
     "sp = MCScatterPlot(scheduler=s, classes=classes)\n",
     "sp.create_dependent_modules()\n",
     "for cn in cnames:\n",
-    "    sp[cn].min_value.result = PsDict({'_pc0': -np.inf, '_pc1': -np.inf})\n",
-    "    sp[cn].max_value.result = PsDict({'_pc0': np.inf, '_pc1': np.inf})\n",
+    "    sp[cn].min_value.result.update({'_pc0': -np.inf, '_pc1': -np.inf})\n",
+    "    sp[cn].max_value.result.update({'_pc0': np.inf, '_pc1': np.inf})\n",
     "sp_widget = Scatterplot()\n",
     "sp_widget.link_module(sp)\n",
     "s.task_start(tick_proc=moderator);"
@@ -61,11 +61,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "add2bf295809437a9f07112593a3dc6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scatterplot(to_hide=[])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting scheduler\n",
+      "# Scheduler added module(s): ['blobs_table_1', 'dyn_var_1', 'dyn_var_2', 'histogram_index_1', 'histogram_index_2', 'histogram_index_3', 'histogram_index_4', 'max_1', 'max_2', 'max_3', 'max_4', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'merge_dict_1', 'merge_dict_2', 'merge_dict_3', 'merge_dict_4', 'min_1', 'min_2', 'min_3', 'min_4', 'ppca_1', 'ppca_transformer_1', 'range_query2d_1', 'range_query2d_2', 'sample_1']\n"
+     ]
+    }
+   ],
    "source": [
     "display(sp_widget)"
    ]
@@ -73,7 +96,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
