--- a/demos/MBKMeansSimpleDemo.ipynb
+++ b/demos/MBKMeansSimpleDemo.ipynb
@@ -49,8 +49,8 @@
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=3, batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
     "sp.create_dependent_modules(data,'result')\n",
-    "sp['Scatterplot'].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
-    "sp['Scatterplot'].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
+    "sp['Scatterplot'].min_value.result.update({'_0': -np.inf, '_1': -np.inf})\n",
+    "sp['Scatterplot'].max_value.result.update({'_0': np.inf, '_1': np.inf})\n",
     "#mbkmeans.input.table = data.output.table\n",
     "mbkmeans.create_dependent_modules(sp['Scatterplot'].range_query_2d)\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
@@ -88,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
