--- a/demos/MBKMeansWithLabelsDemo.ipynb
+++ b/demos/MBKMeansWithLabelsDemo.ipynb
@@ -55,8 +55,8 @@
     "sp.create_dependent_modules()\n",
     "for i in range(n_clusters):\n",
     "    cname = f\"k{i}\"\n",
-    "    sp[cname].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
-    "    sp[cname].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
+    "    sp[cname].min_value.result.update({'_0': -np.inf, '_1': -np.inf})\n",
+    "    sp[cname].max_value.result.update({'_0': np.inf, '_1': np.inf})\n",
     "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
@@ -92,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
