--- a/demos/PsBoardDemo.ipynb
+++ b/demos/PsBoardDemo.ipynb
@@ -45,7 +45,7 @@
     "except NameError:\n",
     "    s = Scheduler()\n",
     "\n",
-    "URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
+    "URLS = [f\"https://nyc-tlc.s3.amazonaws.com/csv_backup/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
@@ -100,7 +100,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
